@@ -5,6 +5,7 @@
 3. Expose map variable to outter VMap components
 4. Export mapvueSymbol for inject map in custom component
 5. Add useLayerEvent for layers
+6. Add useMutationObserver for VPopup
 
 ### 2022-07-30
 
